<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_home_1"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <com.anlmk.base.ui.views.TextView
        android:id="@+id/txt_date_of_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp20"
        android:background="@drawable/bg_text_view"
        android:padding="@dimen/dp10"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dp10"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/dp20"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp20"
        android:weightSum="3">

        <com.anlmk.base.ui.views.TextView
            android:id="@+id/txtSession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:background="@drawable/bg_text_view"
            android:padding="@dimen/dp10"
            android:gravity="center"
            android:drawablePadding="@dimen/dp10"
            android:drawableEnd="@drawable/ic_expand_more_24"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />

        <com.anlmk.base.ui.views.TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/eat_time"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            />

        <com.anlmk.base.ui.views.TextView
            android:id="@+id/txtTimeOfMeal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp20"
            android:background="@drawable/bg_text_view"
            android:padding="@dimen/dp10"
            android:gravity="center"
            android:drawablePadding="@dimen/dp10"
            android:drawableEnd="@drawable/baseline_access_time_24"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            />
    </LinearLayout>

    <com.anlmk.base.ui.views.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:textSize="@dimen/text_size_16"
        android:text="@string/food_of_meal"
        android:textColor="@color/white"/>

    <com.anlmk.base.ui.views.EditText
        android:id="@+id/edtFoodOfMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_text_view"
        android:layout_marginHorizontal="@dimen/dp16"
        android:padding="@dimen/dp10"
        android:hint="@string/food_of_meal"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        />

    <com.anlmk.base.ui.views.TextView
        android:id="@+id/imgChooseImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/image_of_meal"
        android:layout_marginHorizontal="@dimen/dp20"
        android:background="@drawable/bg_text_view"
        android:gravity="center"
        android:padding="@dimen/dp20"
        android:drawableTop="@drawable/baseline_photo_camera_back_24"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgImageOfMeal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp100"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_gravity="center"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:weightSum="3">


        <com.anlmk.base.ui.views.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two_hours_after_eating"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_view"
            android:layout_weight="2">

            <com.anlmk.base.ui.views.EditText
                android:id="@+id/edtmmolValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:drawablePadding="@dimen/dp10"
                android:layout_weight="1"
                android:hint="@string/hint_input_mmol"
                android:gravity="center"
                android:background="@color/transparent"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/black"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="numberDecimal"
                />

            <com.anlmk.base.ui.views.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10"
                android:gravity="end"
                android:text="@string/mmol"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFunction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginTop="@dimen/dp27"
        android:layout_marginBottom="@dimen/dp48"
        android:layout_weight="1"
        android:gravity="bottom">

        <com.anlmk.base.ui.views.Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp6"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="@drawable/bg_main_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/sp16"
            app:cusfont="Bold"
            tools:visibility="visible"
            />

        <com.anlmk.base.ui.views.Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp6"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/bg_cancel_button"
            android:textAllCaps="false"
            android:textColor="@color/color_005d98"
            android:textSize="@dimen/sp16"
            app:cusfont="Bold"
            />
    </LinearLayout>
</LinearLayout>